# streetview-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/street_extractor/: __init__.py  cli.py  core.py  viewer.py
tests/: test_cli.py  test_core.py  test_viewer.py
