[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streetview-extractor"
version = "0.1.0"
description = "Download and stitch full Google Street View panoramas from coordinates or an address."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary - all rights reserved" }
authors = [{ name = "Your Name" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "aiohttp>=3.9",
    "requests>=2.31",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
streetview-extract = "street_extractor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
